<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title_main">My Nanodegree Apps!</string>
    <string name="app_name_spotify">Spotify Streamer</string>
    <string name="app_name_scores">Scores App</string>
    <string name="app_name_library">Library App</string>
    <string name="app_name_build">Build it Bigger</string>
    <string name="app_name_reader">XYZ Reader</string>
    <string name="app_name_capstone">Capstone: My Own App</string>
</resources>
