<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.valla.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_main"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonSpotify"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="openApp"
        android:text="@string/app_name_spotify" />

    <Button
        android:id="@+id/buttonScores"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSpotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="openApp"
        android:text="@string/app_name_scores" />

    <Button
        android:id="@+id/buttonLibrary"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonScores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="openApp"
        android:text="@string/app_name_library" />

    <Button
        android:id="@+id/buttonBuild"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLibrary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="openApp"
        android:text="@string/app_name_build" />

    <Button
        android:id="@+id/buttonReader"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBuild"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="openApp"
        android:text="@string/app_name_reader" />

    <Button
        android:id="@+id/buttonCapstone"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonReader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="openApp"
        android:text="@string/app_name_capstone" />
</RelativeLayout>
